--- a/style.css
+++ b/style.css
@@ -1,34 +1,25 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+header {
+    background-image: <img src="pexels-pixabay-301673,jpg"/>
+    /* background-image: url(https://www.pexels.com/photo/pink-petaled-flowers-1002725/); */
+    background-size: cover;
+    height: 10vh;
+  }
+  .jumbotron {
+    padding: 30px;
+    background-image: linear-gradient(180deg, pink, yellow);
+  }
 
-}
- nav a{
-  color: #fff;
-  text-decoration: none;
-  padding: 7px 25px;
-  display: inline-block;
-}
 
-html, body {
-  width: 100%;
-  height:100%;
+h1 {
+    font-size: 25  px;
+    text-align: center;
+    color: purple;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-body {
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
+.jumbotron h1 {
+    text-align: center;
+    color: hotpink;
+    font-family: 'Raleway', Helvetica, Arial, sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
