--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 header {
   background-size: cover;
+  text-align: center;
+  color: rgb(136, 15, 184);
   height: 10vh;
 }
 .jumbotron {
@@ -9,6 +11,8 @@ header {
   background-image: linear-gradient(180deg,pink , rgb(238, 88, 238));
 
 }
+p {font-size: large;}
+    text-align: center;
 
 h1 {
   font-size: 25px;
@@ -28,9 +32,13 @@ h1 {
   padding: 0px;
   box-sizing: border-box;
 }
-
-
-
+img {
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 15%;
+  animation: ease-in;
+}
 body {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #8bc7dd, #63dfc2);
   background-size: 400% 400%;
@@ -48,26 +56,5 @@ body {
     background-position: 0% 50%;
   }
 }
-.horizontal-snap {
-  margin: 0 auto;
-  display: grid;
-  grid-auto-flow: column;
-  gap: 1rem;
-  height: calc(180px + 1rem);
-  padding: 1rem;
-  width: 480px;
-  overflow-y: auto;
-  overscroll-behavior-x: contain;
-  scroll-snap-type: x mandatory;
-}
 
-.horizontal-snap > a {
-  scroll-snap-align: center;
-}
 
-.horizontal-snap img {
-  width: 180px;
-  max-width: none;
-  object-fit: contain;
-  border-radius: 1rem;
-}
