--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body {
   nav > ul {
     display: flex;
     justify-content: space-evenly;
-    padding: 10;
+    padding: 0 0;
   }
 
   nav > ul > li {
