--- a/style.css
+++ b/style.css
@@ -1,3 +1,74 @@
+#jumbotron {
+  background:  center center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+nav ul{
+  background: silver;
+  list-style-type: none;
+  padding: 10px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+nav ul li{
+  background: orchid;
+  flex: 1 1 100px;
+  margin: 4px;
+  transition: all 1s ease;
+}
+
+nav ul li a{
+  font-family: 'Roboto', sans-serif;
+  color: purple;
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+  display: inline-block;
+  text-decoration: none;
+  padding: 20px;
+}
+
+nav ul li a:after,
+nav ul li a:before {
+  transition: all .5s;
+}
+
+nav ul li a:hover {
+  color: hotpink;
+}
+
+nav ul li:hover{
+  transform:  translateY(10px);
+  background: #72F2EB;
+}
+
+nav ul li a:after{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: hotpink;
+  height: 5px;
+}
+
+nav ul li a:hover:after {
+  width: 100%;
+}
+
+nav > .fa-bars {
+  display: none;
+}
 header {
   background-size: cover;
   text-align: center;
@@ -56,92 +127,7 @@ body {
   100% {
     background-position: 0% 50%;
   }
-  bio {
-    margin: 1rem;
-    color: purple;
-  }
 
-@media (max-width: 549px){
-  .hidden--mobile {
-    display: none !important;
-  }
-  nav.hover{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  nav > i {
-    padding: 1rem;
-    font-size: 2em;
-  }
-
-  nav > ul {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 0;
-  }
-
-  nav > ul > li {
-    padding: .5rem;
-    list-style-type: none;
-  }
-
-  #bio img {
-    float: left;
-    width: 40%;
-    height: auto;
-    margin-right: 1rem;
-  }
-
-  #gallery {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-
-@media (min-width: 550px){
-  #jumbotron {
-    height: 60vh;
-  }
-
-  nav > ul {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 0 0;
-  }
-
-  nav > ul > li {
-    display: inline-block;
-    text-decoration: none;
-    border: 1px solid;
-    padding: .5rem .5rem;
-    border-radius: 25px;
-  }
-
-  nav > .fa-bars {
-    display: none;
-  }
-
-  #bio {
-    margin-right: 3rem;
-
-  }
-
-  #bio img {
-    float: left;
-    width: 25%;
-    height: auto;
-    margin-right: 1rem;
-  }
-
-  #gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, min-max(33%, 1fr));
-    background-color: transparent;
-  }
   h2 {
     font-size: 25px;
     text-align: center;
