--- a/style.css
+++ b/style.css
@@ -92,6 +92,20 @@ h1 {
   color: purple;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
+h3 {
+  font-size: 25px;
+  text-align: center;
+  color: purple;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+p {
+  font-size: large;
+  color: purple;
+  text-align: center;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .jumbotron h1 {
   text-align: center;
   color: purple;
