--- a/style.css
+++ b/style.css
@@ -6,7 +6,64 @@
   justify-content: center;
   align-items: center;
   height: 90vh;
+
 }
+
+#jumbotron > h2 {
+  color: purple;
+  text-align: center;
+
+}
+
+.biopic {
+  margin: 0 auto;
+  display: block;
+  padding: 20px;
+  text-align: center;
+}
+.biopic:hover {
+  transform: scale(2.5);
+}
+
+
+
+.carousel-container{
+  width: 100%;
+  margin: auto;
+  border: 10px double;
+  overflow: hidden;
+  position: absolute;
+
+}
+.carousel-slide img{
+  height: 100%;
+  width: 100%;
+}
+
+.carousel-slide{
+  display: flex;
+  width: 200%;
+  height: 250px;
+}
+#prevBtn{
+  position:absolute;
+  top: 50%;
+  z-index: 10;
+  left: 5%;
+  font-size: 30px;
+  color: hotpink;
+  cursor: pointer;
+}
+#nextBtn{
+  position:absolute;
+  top: 50%;
+  z-index: 10;
+  right: 5%;
+  font-size: 30px;
+  color: hotpink;
+  cursor: pointer;
+}
+
 
 nav ul{
   background: silver;
@@ -76,15 +133,15 @@ header {
   height: 10vh;
 }
 
-.jumbotron {
+/* .jumbotron {
   padding: 5px;
-  height: 10vh;
+  height: 10vh; */
 
   background-image: linear-gradient(180deg,pink , rgb(238, 88, 238));
 
 }
-p {font-size: large;}
-    text-align: center;
+/* p {font-size: large;}
+    text-align: center; */
 
 h1 {
   font-size: 25px;
@@ -125,10 +182,12 @@ img {
   width: 15%;
   animation: ease-in;
 }
+
 body {
   background: linear-gradient(-45deg, rgb(214, 98, 166), pink, #8bc7dd, #63dfc2);
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
+  border: 10px solid darkmagenta;
 }
 
 @keyframes gradient {
@@ -147,5 +206,15 @@ body {
     text-align: center;
     color: purple;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+nav {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+}
+footer {
+  display: flex;
+  align-items: center;
 }
 }
