--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 #jumbotron > h2 {
   color: purple;
   text-align: center;
+  padding: 0px;
 
 }
 
@@ -24,8 +25,6 @@
 .biopic:hover {
   transform: scale(1.5);
 }
-
-
 
 .carousel-container{
   width: 100%;
@@ -141,6 +140,7 @@ header {
 p {
   font-size: large;
   text-align: center;
+  padding: 15px;
 }
 
 h1 {
@@ -214,7 +214,10 @@ nav {
 
 }
 footer {
-  display: flex;
-  align-items: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 }
