--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
 
 }
 
+audio::-webkit-media-controls-panel {
+  background-color: hotpink;
+
+}
 #jumbotron > h2 {
   color: purple;
   text-align: center;
@@ -184,9 +188,9 @@ img {
 }
 
 body {
-  background: linear-gradient(-45deg, rgb(214, 98, 166), pink, #8bc7dd, #63dfc2);
+  background: linear-gradient(-45deg, rgb(156, 64, 118), pink, #8bc7dd, #0af7f7);
   background-size: 400% 400%;
-  animation: gradient 10s ease infinite;
+  animation: gradient 6s ease infinite;
   border: 10px solid darkmagenta;
 }
 
